Bug 180921. Make nsDocumentViewer::Show call nsDocumentViewer::MakeWindow instead of duplicating code. Fixes a bug where subdoc view linkage was added to MakeWindow but not Show. r=jkeiser,sr=jst